<resources>
    <string name="app_name">ShareTips</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in">Sign In</string>
    <string name="need_an_account">Need an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="have_an_account">Have an account?</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_wait">Please wait ...</string>
</resources>